More work done on structure. Added parsing of the save files of movie lists.

--- a/res/layout/list_movie_view.xml
+++ b/res/layout/list_movie_view.xml
@@ -28,4 +28,21 @@
         android:layout_marginTop="50dp"
         android:text="Button" />
 
+    <ScrollView
+        android:id="@+id/scrollView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/textView1"
+        android:layout_marginTop="174dp" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
+        </LinearLayout>
+    </ScrollView>
+
 </RelativeLayout>
