--- a/res/layout/detailed_movie_view.xml
+++ b/res/layout/detailed_movie_view.xml
@@ -28,4 +28,32 @@
         android:layout_marginTop="50dp"
         android:text="Button" />
 
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/textView1"
+        android:layout_marginLeft="18dp"
+        android:layout_marginTop="29dp"
+        android:text="Title:" />
+
+    <TextView
+        android:id="@+id/plotSimple"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/title"
+        android:layout_below="@+id/title"
+        android:layout_marginTop="30dp"
+        android:text="plotSimple" />
+
+    <TextView
+        android:id="@+id/type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/plotSimple"
+        android:layout_below="@+id/plotSimple"
+        android:layout_marginTop="37dp"
+        android:text="type" />
+
 </RelativeLayout>
