--- a/res/layout/list_movie_view.xml
+++ b/res/layout/list_movie_view.xml
@@ -45,4 +45,14 @@
         </LinearLayout>
     </ScrollView>
 
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/scrollView1"
+        android:layout_below="@+id/textView1"
+        android:layout_marginLeft="37dp"
+        android:layout_marginTop="64dp" >
+    </ListView>
+
 </RelativeLayout>
