--- a/res/layout/list_movie_view.xml
+++ b/res/layout/list_movie_view.xml
@@ -10,7 +10,7 @@
     tools:context=".MainMovieView" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -23,7 +23,7 @@
         android:id="@+id/watched"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
+        android:layout_alignLeft="@+id/title"
         android:layout_alignParentTop="true"
         android:layout_marginTop="50dp"
         android:text="Button" />
@@ -35,7 +35,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/textView1"
+        android:layout_below="@+id/title"
         android:layout_marginTop="174dp" >
 
         <LinearLayout
@@ -50,7 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/scrollView1"
-        android:layout_below="@+id/textView1"
+        android:layout_below="@+id/title"
         android:layout_marginLeft="37dp"
         android:layout_marginTop="64dp" >
     </ListView>
