changed the checkbox layout so that it's properly centered

--- a/res/layout/detailed_movie_view.xml
+++ b/res/layout/detailed_movie_view.xml
@@ -97,14 +97,6 @@
         android:layout_marginBottom="31dp" />
 
     <ImageView
-        android:id="@+id/favoriteCheckBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/watchedButton"
-        android:layout_toLeftOf="@+id/title"
-        android:src="@android:drawable/checkbox_on_background" />
-
-    <ImageView
         android:id="@+id/watchedCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -113,12 +105,19 @@
         android:src="@android:drawable/checkbox_on_background" />
 
     <ImageView
+        android:id="@+id/favoriteCheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/toWatchCheckBox"
+        android:layout_toLeftOf="@+id/movieRatings"
+        android:src="@android:drawable/checkbox_on_background" />
+
+    <ImageView
         android:id="@+id/toWatchCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/movieRatings"
         android:layout_below="@+id/toWatchButton"
-        android:layout_marginRight="15dp"
+        android:layout_toRightOf="@+id/movieRatings"
         android:src="@android:drawable/checkbox_on_background" />
 
 </RelativeLayout>
