--- a/res/layout/list_movie_view.xml
+++ b/res/layout/list_movie_view.xml
@@ -30,8 +30,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/scrollView1"
-        android:layout_marginLeft="37dp"
-        android:layout_marginTop="64dp" >
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true" >
+
     </ListView>
 
 </RelativeLayout>
