added JSON and fixed layout bug

--- a/res/layout/detailed_movie_view.xml
+++ b/res/layout/detailed_movie_view.xml
@@ -41,6 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/releaseDate"
         android:layout_below="@+id/releaseDate"
+        android:singleLine="true"
         android:text="Actors" />
 
     <TextView
@@ -57,7 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/pictureImdb"
         android:layout_alignRight="@+id/title"
-        android:layout_below="@+id/directors"
+        android:layout_below="@+id/pictureImdb"
         android:layout_marginTop="25dp"
         android:text="Simple Plot" />
 
